--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <hr>
     <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="row">
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div id="menu1" class="tab-pane fade">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="row">
