--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                     </div>
                                     <div class="col-md-2">100 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn2" disabled=""> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn2" disabled=""> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -192,7 +192,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn-primary btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn-primary btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
@@ -240,7 +240,7 @@
                                     </div>
                                     <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
                                     </div>
-                                    <div class="col-md-2"><button class="btn btn-primary btn2"> Reserved </button>
+                                    <div class="col-md-2"><button class="btn btn-primary btn2"> Reserve </button>
                                     </div>
                                 </div>
                             </div>
