--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                             <div class="col-md-2">
                                 <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
                             </div>
-                            <div class="col-md-2"><b class="gray">All Locations </b><i class="caret gray"></i>
+                            <div class="col-md-2 padding-0"><b class="gray">All Locations </b><i class="caret gray"></i>
                             </div>
-                            <div class="col-md-5"></div>
-                            <div class="col-md-3">
+                            <div class="col-md-6"></div>
+                            <div class="col-md-2">
                             </div>
                         </div>
                     </div>
@@ -102,13 +102,12 @@
                             <div class="col-md-2">
                                 <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
                             </div>
-                            <div class="col-md-2"><b class="gray">All Locations </b><i class="caret gray"></i>
+                            <div class="col-md-2 padding-0"><b class="gray">All Locations </b><i class="caret gray"></i>
                             </div>
-                            <div class="col-md-5"></div>
-                            <div class="col-md-3">
+                            <div class="col-md-6"></div>
+                            <div class="col-md-2">
                                 <div class="input-group">
-                                    <input class="form-control" placeholder="Search by name" name="srch-term" id="ed-srch-term" type="text" style="border-radius: 99px"><i class="fa fa-search pull-right" style="margin-top: -25px; position: relative;z-index: 2;margin-right: 10px;color: #F0F0F1;"
-                                        aria-hidden="true"></i>
+                                    <input class="form-control search-bg" placeholder="Search by name" name="srch-term" id="ed-srch-term" type="text" style="border-radius: 99px"><i class="fa fa-search pull-right search-icon" aria-hidden="true"></i>
                                 </div>
                             </div>
                         </div>
