Updated Code changes for Testing UI

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-2">
+                                <div class="col-md-2 daterange-width">
                                     <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
                                 </div>
                                 <div class="col-md-2 padding-0"><b class="gray">All Locations </b><i class="caret gray"></i>
@@ -92,25 +92,7 @@
                     </div>
                     <!-- Single Panel - Reserved -->
                     <div id="schedule-panel-container">
-                        <div class="btn location-label"> First Floor </div><br><br>
-                        <div class="panel-group">
-                            <div class="panel panel-reserved">
-                                <div class="panel-body">
-                                    <div class="row">
-                                        <div class="col-md-2"><b>Monday, May 18</b>
-                                        </div>
-                                        <div class="col-md-4">
-                                        </div>
-                                        <div class="col-md-2">
-                                        </div>
-                                        <div class="col-md-2">
-                                        </div>
-                                        <div class="col-md-2"><button class="btn btn3"> Reserved </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <!--  -->
                     </div>
                     <!-- Single Panel End -->
                 </div>
@@ -122,13 +104,13 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-2">
+                                <div class="col-md-2 daterange-width">
                                     <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
                                 </div>
                                 <div class="col-md-2 padding-0"><b class="gray">All Locations </b><i class="caret gray"></i>
                                 </div>
                                 <div class="col-md-6"></div>
-                                <div class="col-md-2">
+                                <div class="col-md-2 padding-0 pull-right">
                                     <div class="input-group">
                                         <input class="form-control search-bg" placeholder="Search by name" name="srch-term" id="ed-srch-term" type="text" style="border-radius: 99px">
                                         <i class="fa fa-search pull-right search-icon" aria-hidden="true"></i>
@@ -139,27 +121,7 @@
                     </div>
                     <!-- Single Panel To be Reserved -->
                     <div id="calender-panel-container">
-                        <div class="btn location-label"> First Floor </div><br><br>
-                        <div class="container-panel-data">
-                            <div class="panel-group">
-                                <div class="panel panel-primary">
-                                    <div class="panel-body">
-                                        <div class="row">
-                                            <div class="col-md-2"><b>Monday, May 18</b>
-                                            </div>
-                                            <div class="col-md-4">
-                                            </div>
-                                            <div class="col-md-2">75 Spot Available
-                                            </div>
-                                            <div class="col-md-2">&nbsp;25 People Reserved <i class="caret"></i>
-                                            </div>
-                                            <div class="col-md-2"><button class="btn btn2"> Reserve </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <!--  -->
                     </div>
                     <!-- Single Panel End -->
                 </div>
