Updated Code for Dynamic Content and Hover

--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
                                 <div class="col-md-2 daterange-width">
                                     <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
                                 </div>
-                                <div class="col-md-2 padding-0"><b class="gray">All Locations </b><i class="caret gray"></i>
+                                <div class="col-md-2 padding-0">
+                                    <div class="dropdown show">
+                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                          All Locations
+                                        </a>
+                                      
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-6"></div>
                                 <div class="col-md-2">
@@ -107,7 +115,15 @@
                                 <div class="col-md-2 daterange-width">
                                     <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
                                 </div>
-                                <div class="col-md-2 padding-0"><b class="gray">All Locations </b><i class="caret gray"></i>
+                                <div class="col-md-2 padding-0">
+                                    <div class="dropdown show">
+                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                          All Locations
+                                        </a>
+                                      
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-6"></div>
                                 <div class="col-md-2 padding-0 pull-right">
