Updated Code for Button and Fixed Start and End Date

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <!-- Responsice CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.mob.css">
 
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js "></script>
+    <script type="text/javascript " src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js "></script>
+
+    <!-- DateRangePicker -->
+    <script type="text/javascript " src="dist/daterangepicker.js "></script>
+
+    <!-- Custom Script -->
+    <script type="text/javascript " src="js/script.js "></script>
+
+
 </head>
 
 <body>
@@ -84,8 +96,8 @@
                                 </div>
                                 <div class="col-md-2 padding-0">
                                     <div class="dropdown show">
-                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          All Locations
+                                        <a class="btn btn-secondary dropdown-toggle gray" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                          <b>All Locations</b>
                                         </a>
                                       
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -117,8 +129,8 @@
                                 </div>
                                 <div class="col-md-2 padding-0">
                                     <div class="dropdown show">
-                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          All Locations
+                                        <a class="btn btn-secondary dropdown-toggle gray" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                          <b>All Locations</b>
                                         </a>
                                       
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -144,19 +156,6 @@
             </div>
         </div>
     </section>
-
-
-
-    <!-- Scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js "></script>
-    <script type="text/javascript " src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js "></script>
-
-    <!-- DateRangePicker -->
-    <script type="text/javascript " src="dist/daterangepicker.js "></script>
-
-    <!-- Custom Script -->
-    <script type="text/javascript " src="js/script.js "></script>
 
 
 </body>
