Updated All the Basic Changes and Added Images for Slider

--- a/index.html
+++ b/index.html
@@ -92,14 +92,15 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-md-2 daterange-width">
-                                    <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
+                                    <button class="date-picker-style" name="daterange">
+                                        <i class="caret gray"></i>
+                                    </button>
                                 </div>
                                 <div class="col-md-2 padding-0">
                                     <div class="dropdown show">
                                         <a class="btn btn-secondary dropdown-toggle gray" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           <b>All Locations</b>
                                         </a>
-                                      
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         </div>
                                     </div>
@@ -112,7 +113,7 @@
                     </div>
                     <!-- Single Panel - Reserved -->
                     <div id="schedule-panel-container">
-                        <!--  -->
+                        <!-- Place Holder for Data -->
                     </div>
                     <!-- Single Panel End -->
                 </div>
@@ -125,14 +126,15 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-md-2 daterange-width">
-                                    <button class="date-picker-style" name="daterange"><b class="gray">May 18 - May 28 </b><i class="caret gray"></i></button>
+                                    <button class="date-picker-style" name="daterange">
+                                        <i class="caret gray"></i>
+                                    </button>
                                 </div>
                                 <div class="col-md-2 padding-0">
                                     <div class="dropdown show">
                                         <a class="btn btn-secondary dropdown-toggle gray" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           <b>All Locations</b>
                                         </a>
-                                      
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         </div>
                                     </div>
@@ -149,7 +151,7 @@
                     </div>
                     <!-- Single Panel To be Reserved -->
                     <div id="calender-panel-container">
-                        <!--  -->
+                        <!-- Place Holder for Data -->
                     </div>
                     <!-- Single Panel End -->
                 </div>
