--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-2 daterange-width">
+                                <div class="col-xl-2 col-lg-1 col-md-2 col-sm-4 col-xs-4 daterange-width">
                                     <button class="date-picker-style" name="daterange">
                                         <i class="caret gray"></i>
                                     </button>
                                 </div>
-                                <div class="col-md-2 padding-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-3 col-xs-4 padding-0">
                                     <div class="dropdown show">
                                         <a class="btn btn-secondary dropdown-toggle gray" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           <b>All Locations</b>
@@ -105,8 +105,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6"></div>
-                                <div class="col-md-2">
+                                <div class="col-xl-8 col-lg-8 col-md-6 col-sm-3  col-xs-2"></div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2  col-xs-2">
                                 </div>
                             </div>
                         </div>
@@ -125,12 +125,12 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-2 daterange-width">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-4 col-xs-6 daterange-width">
                                     <button class="date-picker-style" name="daterange">
                                         <i class="caret gray"></i>
                                     </button>
                                 </div>
-                                <div class="col-md-2 padding-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-3 col-xs-6 padding-0">
                                     <div class="dropdown show">
                                         <a class="btn btn-secondary dropdown-toggle gray" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           <b>All Locations</b>
@@ -139,8 +139,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6"></div>
-                                <div class="col-md-2 padding-0 pull-right">
+                                <div class="col-xl-8 col-lg-8 col-md-5 col-sm-1 col-xs-1"></div>
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4 col-xs-11 padding-0 pull-right">
                                     <div class="input-group">
                                         <input class="form-control search-bg" placeholder="Search by name" name="srch-term" id="ed-srch-term" type="text" style="border-radius: 99px">
                                         <i class="fa fa-search pull-right search-icon" aria-hidden="true"></i>
