--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </nav>
     </section>
 
+    <!-- Options Section -->
     <section id="options-tab">
         <div>
             <ul class="nav nav-tabs">
@@ -81,7 +82,7 @@
         <hr>
     </section>
 
-
+    <!-- Panel Section -->
     <section id="panel-section">
         <div class="tab-content">
             <!-- Schedule Part -->
